--- a/ss-build/Dockerfile
+++ b/ss-build/Dockerfile
@@ -4,7 +4,7 @@ FROM tetraweb/php:7.0
 RUN apt-get update -y && apt-get install -y \
     unzip \
     libfontconfig \
-    php-intl
+    php5-intl
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 RUN php composer-setup.php
