Upgrade Node to 8.x

--- a/ss-php71/Dockerfile
+++ b/ss-php71/Dockerfile
@@ -10,6 +10,10 @@ RUN apt-get update -y && apt-get install -y \
 
 RUN docker-php-ext-install intl zip
 
+# Update Node.js
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - \
+    && apt-get install -y nodejs build-essential
+
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 RUN php composer-setup.php
 RUN php -r "unlink('composer-setup.php');"
