--- a/ss-php56/Dockerfile
+++ b/ss-php56/Dockerfile
@@ -1,11 +1,17 @@
-FROM tetraweb/php:5.6
+FROM brettt89/silverstripe-web:5.6
 
 # Update and Install Packages
 RUN apt-get update -y && apt-get install -y \
-    zlib1g-dev
+    gnupg \
+    rsync
 
-RUN docker-php-ext-install zip
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php \
+    && mv composer.phar /usr/local/bin/ \
+    && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer
 
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-RUN php composer-setup.php
-RUN php -r "unlink('composer-setup.php');"
+# Install Node.js & Yarn
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
+    && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
+    && curl -sL https://deb.nodesource.com/setup_13.x | bash - \
+    && apt-get install -y nodejs build-essential yarn
