--- a/ss-php71/Dockerfile
+++ b/ss-php71/Dockerfile
@@ -1,19 +1,17 @@
-FROM tetraweb/php:7.1
+FROM brettt89/silverstripe-web:7.1
 
 # Update and Install Packages
 RUN apt-get update -y && apt-get install -y \
-    unzip \
-    libfontconfig \
-    libicu-dev \
-    libzip-dev \
-    jq
+    gnupg \
+    rsync
 
-RUN docker-php-ext-install intl zip
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php \
+    && mv composer.phar /usr/local/bin/ \
+    && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer
 
-# Update Node.js
-RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - \
-    && apt-get install -y nodejs build-essential
-
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-RUN php composer-setup.php
-RUN php -r "unlink('composer-setup.php');"
+# Install Node.js & Yarn
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
+    && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
+    && curl -sL https://deb.nodesource.com/setup_13.x | bash - \
+    && apt-get install -y nodejs build-essential yarn
