--- a/ss-php56/Dockerfile
+++ b/ss-php56/Dockerfile
@@ -2,6 +2,7 @@ FROM brettt89/silverstripe-web:5.6
 
 # Update and Install Packages
 RUN apt-get update -y && apt-get install -y \
+    apt-transport-https \
     gnupg \
     rsync
 
