--- a/ss-php73/Dockerfile
+++ b/ss-php73/Dockerfile
@@ -4,7 +4,8 @@ FROM brettt89/silverstripe-web:7.3
 RUN apt-get update -y && apt-get install -y \
     gnupg \
     jq \
-    rsync
+    rsync \
+    openssh-client
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php \
