--- a/ss-php73/Dockerfile
+++ b/ss-php73/Dockerfile
@@ -5,7 +5,8 @@ RUN apt-get update -y && apt-get install -y \
     gnupg \
     jq \
     rsync \
-    openssh-client
+    openssh-client \
+    git
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php \
